test/expected/cli/export_function.out
== brace-body function serializes:
BASH_FUNC_greet%%=() { echo "hi $1"; }
== error on a non-function:
shit: 1:11: error: Builtin 'export': 'not_a_function' is not a function.
     1 |  export -f not_a_function
       |            ^~~~~~~~~~~~~~ here.
== an inherited BASH_FUNC is not imported and cannot inject:
x-absent
